--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,29 @@
-# This is a basic workflow to help you get started with Actions
+# GitHub Actions Workflow for India Air Quality JSON
 name: india_air_quality_json
 
 # Controls when the workflow will run
 on:
-   #Triggers the workflow on push or pull request events but only for the main branch
-   workflow_dispatch:
-#on:
-#  schedule:
-#     - cron: '45 * * * *'  # Runs every 45th min
+  workflow_dispatch:  # Manual trigger
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    env:
-      SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-      SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
-      SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-      AQI_API_KEY: ${{ secrets.AQI_API_KEY }}
+    environment: AQI  # Use the AQI environment to access secrets
 
     steps:
-      - uses: actions/checkout@v3
-      - run: |
-          home_dir=$(pwd)
-          echo $home_dir
-          echo -----------------------------------------------------------------------
-          pip install --upgrade pip    
-          echo -----------------------------------------------------------------------
-          pip install "snowflake-snowpark-python[pandas]"
-          echo -----------------------------------------------------------------------
-          ls -la
-          pwd
-          echo ----------------------------------------------------------------------- 
-          python $home_dir/src/ingest_api_data.py
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        run: pip install --upgrade pip
+
+      - name: Install Dependencies
+        run: pip install "snowflake-snowpark-python[pandas]"
+
+      - name: Run Python Script with Secrets
+        env:
+          SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+          SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
+          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+          AQI_API_KEY: ${{ secrets.AQI_API_KEY }}
+        run: python src/ingest_api_data.py
