--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
+          if [ -z "$AQI_API_KEY" ]; then echo "AQI_API_KEY is NOT set"; else echo "AQI_API_KEY is set"; fi
+          if [ -z "$SNOWFLAKE_ACCOUNT" ]; then echo "SNOWFLAKE_ACCOUNT is NOT set"; else echo "SNOWFLAKE_ACCOUNT is set"; fi
+
+      - run: |
           home_dir=$(pwd)
           echo "Home Directory: $home_dir"
           echo "---------------------------------------"
