--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - run: |
-          if [ -z "$AQI_API_KEY" ]; then echo "AQI_API_KEY is NOT set"; else echo "AQI_API_KEY is set"; fi
-          if [ -z "$SNOWFLAKE_ACCOUNT" ]; then echo "SNOWFLAKE_ACCOUNT is NOT set"; else echo "SNOWFLAKE_ACCOUNT is set"; fi
 
-      - run: |
+      - name: Check if Secrets are Loaded
+        run: |
+          if [ -z "$AQI_API_KEY" ]; then echo "❌ AQI_API_KEY is NOT set"; else echo "✅ AQI_API_KEY is set"; fi
+          if [ -z "$SNOWFLAKE_ACCOUNT" ]; then echo "❌ SNOWFLAKE_ACCOUNT is NOT set"; else echo "✅ SNOWFLAKE_ACCOUNT is set"; fi
+
+      - name: Install Dependencies and Run Script
+        run: |
           home_dir=$(pwd)
           echo "Home Directory: $home_dir"
           echo "---------------------------------------"
