--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,35 +3,30 @@ name: india_air_quality_json
 
 # Controls when the workflow will run
 on:
-  workflow_dispatch:
-  # schedule:
-  #   - cron: '45 * * * *'  # Runs every 45th min
+   #Triggers the workflow on push or pull request events but only for the main branch
+   workflow_dispatch:
+#on:
+#  schedule:
+#     - cron: '45 * * * *'  # Runs every 45th min
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    env:
-      AQI_SECRET: ${{ secrets.AQI_SECRET }}
-      SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-      SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
-      SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+
     steps:
       - uses: actions/checkout@v3
-      - name: Install Dependencies and Run Script
-        run: |
+      - run: |
           home_dir=$(pwd)
-          echo "Home Directory: $home_dir"
-          echo "---------------------------------------"
-          
+          echo $home_dir
+          echo -----------------------------------------------------------------------
           pip install --upgrade pip    
-          echo "---------------------------------------"
-          
+          echo -----------------------------------------------------------------------
           pip install "snowflake-snowpark-python[pandas]"
-          echo "---------------------------------------"
-          
+          echo -----------------------------------------------------------------------
           ls -la
           pwd
-          echo "---------------------------------------"
-          
+          echo ----------------------------------------------------------------------- 
           python $home_dir/src/ingest_api_data.py
