--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,38 @@
-# This is a basic workflow to help you get started with Actions
 name: india_air_quality_json
 
-# Controls when the workflow will run
 on:
-   #Triggers the workflow on push or pull request events but only for the main branch
-   workflow_dispatch:
-#on:
-#  schedule:
-#     - cron: '45 * * * *'  # Runs every 45th min
+  workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-
     steps:
-      - name: get aqi data
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Install Dependencies & Run Script
         env:
           AQI_API_KEY: ${{ secrets.AQI_API_KEY }}
           SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
           SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
           SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-      - run: |
+        run: |
           home_dir=$(pwd)
-          echo $home_dir
+          echo "Current directory: $home_dir"
           echo "Using API key: $AQI_API_KEY"
-          echo -----------------------------------------------------------------------
+          echo "-----------------------------------------------"
+
+          # Upgrade pip
           pip install --upgrade pip    
-          echo -----------------------------------------------------------------------
+
+          # Install required libraries
           pip install "snowflake-snowpark-python[pandas]"
-          echo -----------------------------------------------------------------------
+
+          echo "-----------------------------------------------"
           ls -la
           pwd
-          echo ----------------------------------------------------------------------- 
+          echo "-----------------------------------------------"
+
+          # Run Python script
           python $home_dir/src/ingest_api_data.py
