--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: india_air_quality_json
 #on:
 #  workflow_dispatch:
 
- Trigger the workflow every 45th minute
+#Trigger the workflow every 45th minute
 on:
   schedule:
      - cron: '45 * * * *'  # Runs every 45th min
